deployment/minio-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mc
  namespace: lakehouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mc
  template:
    metadata:
      labels:
        app: mc
    spec:
      containers:
      - name: mc
        image: minio/mc
        command:
        - /bin/sh
        - -c
        - |
          until /usr/bin/mc config host add minio http://minio:9000 minio minio123; do
            echo '...waiting...'
            sleep 1
          done;
          /usr/bin/mc mb minio/warehouse || echo "Warehouse bucket already exists, using it..."
          /usr/bin/mc policy set public minio/warehouse
          # Keep the container running to maintain the state
          while true; do
            sleep 3600
          done
