deployment/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: lakehouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9001
            initialDelaySeconds: 120
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9001
            initialDelaySeconds: 120
            periodSeconds: 20
          args:
            - server
            - /data
            - --console-address
            - :9001
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
          - name: minio-data
            mountPath: /data
            readOnly: false
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-pvc
