deployment/spark-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  namespace: lakehouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-master
  template:
    metadata:
      labels:
        app: spark-master
    spec:
      containers:
      - name: spark-master
        image: sk97/spark-master-custom:latest
        ports:
        - containerPort: 7077
        - containerPort: 8080
        volumeMounts:
        - name: spark-defaults
          mountPath: /opt/spark/conf
      volumes:
      - name: spark-defaults
        configMap:
          name: spark-master-config
