deployment/spark-notebook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-notebook
  namespace: lakehouse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-notebook
  template:
    metadata:
      labels:
        app: spark-notebook
    spec:
      containers:
        - name: spark-notebook
          image: sk97/spark-notebook-custom:latest
          ports:
          - containerPort: 8888
          - containerPort: 4040
          volumeMounts:
          - name: notebooks
            mountPath: /home/jovyan/work
            readOnly: false
          - name: spark-defaults
            mountPath: /usr/local/spark/conf/spark-defaults.conf
            subPath: spark-defaults.conf
        # - name: conda-env
        #   mountPath: /opt/conda/env
      volumes:
        - name: notebooks
          persistentVolumeClaim:
            claimName: notebooks-pvc
        - name: spark-defaults
          configMap:
            name: spark-notebook-config
