deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  namespace: lakehouse
spec:
  rules:
  - host: "lakehouse.com"
    http:
      paths:
      - pathType: Prefix
        path: "/minio"
        backend:
          service:
            name: minio
            port:
              number: 9001
  - host: "lakehouse.com"
    http:
      paths:
      - pathType: Prefix
        path: "/spark-master"
        backend:
          service:
            name: spark-master
            port:
              number: 8080
  - host: "lakehouse.com"
    http:
      paths:
      - pathType: Prefix
        path: "/jupiter"
        backend:
          service:
            name:
            port:
              number: 8888
